# charlieverse

./: .gitignore  BACKLOG.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  config.yaml  pyproject.toml  setup.sh
.charlie/ideas/: 01-tui.md
.charlie/tricks/adr/: SKILL.md
.charlie/tricks/changelog/: SKILL.md
.charlie/tricks/commit/: SKILL.md
.charlie/tricks/docs/: SKILL.md
.charlie/tricks/qc/: SKILL.md
.charlie/tricks/ship/: SKILL.md
.charlie/tricks/test-coverage/: SKILL.md
.charlie/tricks/typo-check/: SKILL.md
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
charlieverse/: __init__.py  config.py  paths.py  server.py  skills.py  tasks.py
charlieverse/api/: __init__.py  entities.py  hooks.py  spa.py  stories.py
charlieverse/api/responses/: __init__.py  created.py  deleted.py  model.py  search.py  story_data.py
charlieverse/cli/: __init__.py  __main__.py  config_cmd.py  context_cmd.py  doctor_cmd.py  events_cmd.py  hooks.py  hooks_cmd.py  import_cmd.py  init_cmd.py  install_cli_cmd.py  log_cmd.py  main.py  server_cmd.py  skill_cmd.py  story_data_cmd.py  trick_cmd.py  update_cmd.py
charlieverse/context/: __init__.py  builder.py  renderer.py  time_utils.py
charlieverse/context/reminders/: __init__.py  engine.py  (+2 more)
charlieverse/db/: __init__.py  database.py  fts.py
charlieverse/embeddings/: __init__.py  service.py  tasks.py
charlieverse/helpers/: __init__.py  banned_words.py  paths.py  skills.py  stop_words.py  text.py  time_utils.py  uuid.py
charlieverse/mcp/: __init__.py  context.py  messages.py  tools_knowledge.py  tools_memory.py  tools_sessions.py  tools_stories.py
charlieverse/memory/: context.py  stores.py
charlieverse/models/: __init__.py  context_message.py  entity.py  knowledge.py  session.py  story.py  work_log.py
charlieverse/nlp/: __init__.py  extractor.py  markdown.py  snippets.py
charlieverse/prompts/: Charlie.md
charlieverse/server/: start.py
charlieverse/tools/: __init__.py  knowledge.py  memory.py  sessions.py  work_log.py
charlieverse/types/: __init__.py  dates.py  id.py  lists.py  strings.py  time.py
docs/: agents.md  api.md  cli.md  competitive-intel-ai-coding-tools-2025.md  getting-started.md  hooks.md  mcp-tools.md  skills.md  troubleshooting.md
docs/decisions/: 2026-03-14-hybrid-search-fts5-sqlite-vec.md  2026-03-14-python-fastmcp-over-swift.md  2026-03-15-tiered-narrative-compression.md  2026-03-16-plugin-based-distribution.md  2026-03-19-raw-sessions-over-derived-stories.md  2026-03-20-charlie-workspace-committed-to-repo.md  2026-03-20-config-local-yaml-overrides.md  2026-03-20-ditto-agent-pattern-for-tricks.md  2026-03-20-mcp-tool-error-and-store-context-conventions.md  2026-03-20-trick-non-blocking-dispatch-by-convention.md  2026-03-21-apache-2-license.md  2026-03-21-drop-recreate-vec-tables-on-rebuild.md  2026-03-21-events-command-removed.md  2026-03-21-mcp-json-mcpservers-wrapper.md  2026-03-21-per-row-fts-sync-over-full-rebuild.md  2026-03-21-process-identity-guard-before-port-kill.md  2026-03-21-story-cascade-sessions-fallback.md  2026-03-21-ttl-eviction-for-activation-seen-ids.md  2026-03-21-uuid-validation-at-api-boundary.md  2026-03-22-entity-list-ordered-by-updated-at.md  2026-03-22-install-force-sync-and-rm-readd-plugin.md  2026-03-22-last-session-tag-and-temporal-weighting-in-renderer.md  2026-03-22-mcp-remember-tools-drop-id-from-response.md  2026-03-22-project-event-entity-types-and-scoping-rules.md  2026-03-22-session-continuity-via-hook-injection-not-greeting-prompt.md  2026-03-22-test-coverage-before-commit-in-ship-workflow.md  2026-03-22-weekly-stories-removed-from-activation-context.md  2026-03-24-moments-include-small-things-and-memory-taxonomy-in-prompt.md  2026-03-25-charlie-init-interactive-setup-wizard.md  2026-03-25-config-defaults-without-config-yaml.md  2026-03-25-paths-module-for-package-relative-asset-resolution.md  2026-03-25-recall-includes-stories-and-markdown-stripping.md  2026-03-25-recall-recency-relevance-reranking.md  2026-03-26-charlie-update-self-updater-command.md  2026-03-26-drop-is-workspace-scoped-property.md  2026-03-26-github-actions-oidc-trusted-publishing.md  2026-03-26-mcp-remember-tools-all-fields-required.md  2026-03-26-recent-messages-injected-into-activation-context.md  2026-03-26-spacy-model-moved-from-deps-to-runtime-install.md  2026-03-26-workspace-as-metadata-not-filter.md  (+22 more)
integrations/claude/: .mcp.json  install.sh  settings.json
integrations/copilot/: install.sh
integrations/shared/: hooks-json.sh  mcp-json.sh
prompts/: Charlie.md  first-run.md
prompts/cli/: Codex.md  Copilot.md
prompts/knowledge/: anti-ai-language.md  brain-friendly-stories.md
prompts/reminders/: annoy-charlie.md  banned-words-violation.md  banned_words.md  collaboration.md  generate-story.md  language-rules.md  memory-tools.md  save-reminder.md  search-memories.md  system-prompt.md  temporal-context.md  temporal-gap.md
prompts/tools/: AgentEngineer.md  Codex.md  Expert.md  Researcher.md  Skill.md  Storyteller.md  Trick.md
scripts/: migrate.sh
tests/: conftest.py  factories.py  test_banned_words.py  test_cli_version.py  test_config.py  test_entity_type.py  test_error_middleware.py  test_fts.py  test_knowledge_store.py  test_markdown.py  test_mcp_context.py  test_memory_store.py  test_memory_tools.py  test_paths.py  test_permalink_response.py  test_renderer.py  test_save_session_escalation.py  test_seen_models.py  test_session_store.py  test_story_store.py  test_text_helpers.py  test_time_utils.py
tools/: build_web.py  extract_conversations.py  extract_tags.py  import_stories.py  migrate.py  migrate_og.py  split_conversations.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
(+157 files in other folders)
