[project]
name = "charlieverse"
version = "1.13.0"
description = "Persistent AI companion layer — memory, personality, knowledge via MCP"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "Apache-2.0"
dependencies = [
    "fastmcp>=2.0",
    "typer>=0.12",
    "aiosqlite>=0.20",
    "sqlite-vec>=0.1",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0",
    "spacy>=3.7",
    "dateparser>=1.2",
]

[project.scripts]
charlie = "charlieverse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist.force-include]
"prompts" = "prompts"
"web/dist" = "web/dist"
"integrations" = "integrations"
"tools" = "tools"

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "charlieverse/prompts"
"web/dist" = "charlieverse/web/dist"
"integrations" = "charlieverse/integrations"
"tools" = "charlieverse/tools_scripts"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "hypothesis>=6.116",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=charlieverse --cov-report=term-missing --cov-config=pyproject.toml"

[tool.coverage.run]
source = ["charlieverse"]
branch = true
omit = ["charlieverse/cli/server_cmd.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
