[project]
name = "charlieverse"
version = "1.14.7"
description = "Persistent memory layer for your AI with a personality that just knows."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "Apache-2.0"
dependencies = [
    "fastmcp>=3.0",
    "typer>=0.12",
    "aiosqlite>=0.20",
    "sqlite-vec>=0.1",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0",
    "spacy>=3.8",
    "dateparser>=1.2",
    "pip>=26.0.1",
    "requests>=2.32.5",
]

[project.scripts]
charlie = "charlieverse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".charlie",
    ".github",
    "docs"
]

[tool.hatch.build.targets.sdist.hooks.custom]
path = "tools/build_web.py"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "tools/build_web.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist.force-include]
"prompts" = "prompts"
"web/dist" = "web/dist"
"integrations" = "integrations"
"tools" = "tools"

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "charlieverse/prompts"
"web/dist" = "charlieverse/web/dist"
"integrations" = "charlieverse/integrations"
"tools" = "charlieverse/tools_scripts"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "hypothesis>=6.116",
    "ruff>=0.15.6",
    "ty>=0.0.23",
    "hatch>=1.16.5",
    "debugpy>=1.8.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=charlieverse --cov-report=term-missing --cov-config=pyproject.toml"

[tool.coverage.run]
source = ["charlieverse"]
branch = true
omit = ["charlieverse/cli/server_cmd.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (error)
    "F",   # pyflakes
    "B",   # bugbear
    "B9",
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "I",   # isort
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
]

ignore = [
    "B011",
    "E501",
    "B008"
]

[tool.ty.terminal]
# Error if ty emits any warning-level diagnostics.
error-on-warning = true

[tool.ty.src]
include = ["charlieverse", "tests"]
exclude = ["**/node_modules", "**/__pycache__", ".venv", ".git", "dist"]

# ty doesn't resolve httpx's re-exported attributes (`AsyncClient`,
# `ConnectError`, `HTTPError`) through its current stub discovery. Scope the
# suppression to just the four files that use httpx lazily inside async
# functions so the rule stays active everywhere else.
[[tool.ty.overrides]]
include = [
    "charlieverse/cli/context_cmd.py",
    "charlieverse/cli/hooks_cmd.py",
    "charlieverse/cli/story_data_cmd.py",
    "charlieverse/context/reminders/rules/search_memories.py",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
